fix(FEC-13950): align attach placeholder with design (#196)

--- a/src/components/attach-placeholder/attach-placeholder.scss
+++ b/src/components/attach-placeholder/attach-placeholder.scss
@@ -3,23 +3,45 @@
 
 .attach-placeholder-container {
   position: absolute;
-  width: 100%;
-  height: 100%;
   top: 0;
   left: 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  width: 100%;
+  height: 100%;
   background: $plugin-background;
-
-  .attach-text {
-    line-height: 20px;
-    font-weight: 700;
-    letter-spacing: normal;
-    color: $tone-1-color;
+  .attach-header {
+    position: absolute;
+    top: 16px;
+    left: 0;
+    width: 100%;
+    height: 32px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 16px;
+    .attach-header-title {
+      font-weight: 700;
+      font-size: 16px;
+      color: $tone-1-color;
+    }  
   }
-  .attach-button {
-    margin-top: 20px;
+  .attach-content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    .attach-text {
+      line-height: 20px;
+      font-weight: 700;
+      letter-spacing: normal;
+      color: $tone-1-color;
+      text-align: center;
+    }
+    .attach-button {
+      margin-top: 20px;
+    }
   }
 }
